# scribble_bin

./: .gitignore  README.md
doc-notes/cloud/gcp/: my_gcp_journey.adoc
doc-notes/fundamentals/grpc/: grpc_fundamentals.adoc
doc-notes/fundamentals/redis/: initial.adoc
doc-notes/oauth2/: fundamentals.html
doc-notes/resume/: prompt_dump.adoc
doc-notes/spring/rest_microservice/: resttemplate_vs_webclient.adoc
hello_flutter/: README.md  analysis_options.yaml  pubspec.yaml
hello_flutter/lib/: main.dart
hello_flutter/lib/pages/: gradient_container.dart
hello_flutter/lib/widgets/: styled_text_temp.dart
java_src/: build.gradle  settings.gradle
java_src/grpc_tutorials/: build.gradle
java_src/skibidi/: build.gradle
py_src/: Dockerfile  LICENSE.txt  README.md  pyproject.toml  requirnments.txt
py_src/prototytpes/foursquare/: api_key.txt  response.json  sample_test.ipynb
py_src/prototytpes/ksack_poc/bidding_poc/: app.py  bid_resolution_service.py
py_src/prototytpes/ksack_poc/bidding_poc/bid_resolution_algos/: bid_resolution_orchestrator.py  ks_implementation.py  simple_greedy_algo.py
py_src/prototytpes/ksack_poc/bidding_poc/spike/: bidding_spike.ipynb  kp_sol_explanation  sample_compute.xlsx  ~$sample_compute.xlsx
py_src/prototytpes/ksack_poc/bidding_poc/static_pages/: bid_resolution_demo.html  bid_resolution_response.json  temp.json
py_src/prototytpes/oauth2_pocs/: kite_test.ipynb
py_src/src/: __about__.py
py_src/src/poc/kite_oauth_poc/controllers/: auth_server_redirect.py
py_src/tests/: __init__.py
(+21 files in other folders)
