[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyscribbles"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
    { name = "Crawler", email = "darkcrawler.in@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8"
]
dependencies = [
    "jupyterlab",
    "fastapi[standard]",
    "uvicorn[standard]",
    "kiteconnect"
]

[project.urls]
Documentation = "https://github.com/Crawler/pyscribbles#readme"
Issues = "https://github.com/Crawler/pyscribbles/issues"
Source = "https://github.com/Crawler/pyscribbles"

[tool.hatch.version]
path = "src/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
    "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src tests}"

[tool.coverage.run]
source_pkgs = ["src", "tests"]
branch = true
parallel = true
omit = [
    "src/__about__.py",
]

[tool.coverage.paths]
src = ["src", "*/src"]
tests = ["tests", "*/tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
